Fix backend 404 errors: Add asgiref WSGI wrapper for Vercel serverless

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 # MongoDB Configuration (Local MongoDB Compass)
-MONGODB_URL=mongodb://localhost:27017/
+MONGODB_URL=mongodb+srv://padarthidhanush_db_user:KlIlaI1Q3PgSMwQq@pathforge.tfvrbcb.mongodb.net/?retryWrites=true&w=majority
 DATABASE_NAME=pathforge
 
 # OpenAI Configuration
