--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,7 +6,7 @@ pymongo==4.9.2
 pydantic==2.10.6
 pydantic-settings==2.7.1
 python-multipart==0.0.6
-asgiref==3.7.2
+mangum==0.17.0
 pypdf==5.1.0
 python-docx==1.1.2
 openai==1.59.5
