--- a/render.yaml
+++ b/render.yaml
@@ -1,21 +1,19 @@
 services:
   - type: web
     name: pathforge-backend
-    runtime: python3
+    runtime: python
     buildCommand: pip install -r backend/requirements.txt
     startCommand: cd backend && uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHONUNBUFFERED
         value: "1"
-      - key: MONGODB_URL
-        fromDatabase:
-          name: pathforge-mongodb
-          property: connectionString
       - key: GROQ_API_KEY
         sync: false
       - key: FIREBASE_CREDENTIALS_PATH
         sync: false
       - key: SECRET_KEY
+        sync: false
+      - key: MONGODB_URL
         sync: false
       - key: CORS_ORIGINS
         value: '["http://localhost:3000", "https://pathforge-frontend.vercel.app"]'
