--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,18 +1,22 @@
-# MongoDB Configuration (Local MongoDB Compass)
-MONGODB_URL=mongodb+srv://padarthidhanush_db_user:KlIlaI1Q3PgSMwQq@pathforge.tfvrbcb.mongodb.net/?retryWrites=true&w=majority
+# ===== LOCAL DEVELOPMENT CONFIG =====
+
+# MongoDB Configuration (LOCAL)
+# Make sure MongoDB is running: mongod
+MONGODB_URL=mongodb://localhost:27017
 DATABASE_NAME=pathforge
 
-# OpenAI Configuration
-OPENAI_API_KEY=your_openai_api_key_here
+# Groq API Configuration (AI Features)
+# Get free API key from: https://console.groq.com/keys
+GROQ_API_KEY=your_groq_api_key_here
 
-# Firebase Configuration (Only for Authentication)
+# Firebase Configuration (Authentication)
 FIREBASE_CREDENTIALS_PATH=./firebase-credentials.json
 
-# CORS Configuration
+# CORS Configuration (Frontend URL)
 CORS_ORIGINS=http://localhost:3000,http://localhost:3001
 
 # Application Settings
-SECRET_KEY=your_secret_key_here
+SECRET_KEY=your_secret_key_min_32_characters_long_here
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
